# tech-challenge

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env-example  load_test_orcamento.py  newrelic.ini  populate_db.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pipeline.yaml  tests.yaml
app/: main.py
app/application/services/: cliente.py  monitoramento_service.py  orcamento.py  ordem_servico.py  password_service.py  product.py  servico.py  user_service.py  vehicle.py
app/application/validators/: cliente.py  ordem_servico.py  servico.py  user_validator.py  vehicle_validator.py  veiculo.py
app/domain/: exceptions.py
app/domain/entities/: cliente.py  inventory_item.py  inventory_item_entity.py  inventory_movement_entity.py  ordem_servico.py  ordem_servico_inventory_item.py  ordem_servico_servico.py  product.py  servico.py  status_ordem_servico.py  user.py  vehicle.py
app/domain/events/: cliente.py  ordem_servico.py  product.py  servico.py  user_event.py
app/domain/repositories/: cliente.py  inventory_item_repository.py  inventory_stock_repository.py  ordem_servico.py  ordem_servico_inventory_item.py  ordem_servico_servico.py  product.py  servico.py  user_repository.py  vehicle_repository.py
app/domain/use_cases/: calcular_tempo_medio_ordem_servico.py  cliente.py  inventory_item_use_case.py  inventory_stock_use_case.py  (+6 more)
app/infrastructure/: auth.py  auth_dependencies.py  container.py  database.py  fast_api.py  logging_config.py
app/test/: __init__.py  conftest.py
infra/: .terraform.lock.hcl  app.tf  config-secrets.tf  database.tf  hpa.tf  jobs.tf  metrics-server.tf  newrelic.tf  output.tf  providers.tf
infra/local/: database.tf  output.tf  provider.tf  variables.tf
k8s/: 01-configmap.yaml  02-externalsecret.yaml  04-deployment.yaml  deployment.yaml  externalsecret.yaml
kubernetes/: configmap.yaml  deployment.yaml  externalsecret.yaml  hpa.yaml  service.yaml
migrations/: env.py
migrations/versions/: 001_create_clientes_table.py  001_initial_create_products_table.py  002_create_clientes_table.py  002_create_servicos_table.py  003_create_inventory_itens.py  003_create_servicos_table.py  004_create_inventory_itens.py  004_create_vehicle.py  005_create_users_table.py  005_create_vehicle.py  146b8536e833_create_clientes_table.py  15bbe7e1474a_create_users_table.py  5c689865e085_create_vehicles_table.py  9820ded0e225_create_servicos_table.py  a7bbf8f8a82a_create_ordem_servico_and_association_.py  c436821072a4_create_ordens_servico_and_association_.py  e1fb419a7cbd_create_ordem_servico_detalhes_tables.py  f3dd6d8fffe2_create_inventory_stock.py  f3dd6d8fffe2_merge_heads.py
(+112 files in other folders)
