[project]
name = "tech-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "Andressa Silva",email = "andressa.workti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "dependency-injector (>=4.48.1,<5.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "cryptography (>=45.0.5,<46.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "newrelic (>=11.2.0,<12.0.0)"
]

[tool.poetry]
packages = [
    {include = "app"},
]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
  | migrations
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "migrations"
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:datetime.*",
    "ignore::DeprecationWarning",
    "ignore:Support for class-based.*:DeprecationWarning",
    "ignore:Using extra keyword arguments.*:DeprecationWarning", 
    "ignore:Pydantic V1 style.*:DeprecationWarning",
    "ignore:The `dict` method is deprecated.*:DeprecationWarning",
    "ignore:datetime.datetime.utcnow.*:DeprecationWarning"
]
